# rask-api

./: Cargo.toml  example.env  readme.md
migrations/2022-10-21-171528_create_user/: up.sql
migrations/2022-11-16-032949_create_task/: down.sql  up.sql
src/: db.rs  errors.rs  handlers.rs  main.rs  schema.rs  utils.rs
src/routes/auth/: handler.rs  route.rs
src/routes/task/: handler.rs  model.rs  route.rs
src/routes/user/: handler.rs  model.rs  route.rs
