[package]
name = "rask-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-session = {version = "0.7", features = ["redis-actor-session"]}
actix-web = "4"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99"
diesel = { version = "2", features = ["postgres", "r2d2", "chrono"]}
diesel_migrations = "2"
dotenvy = "0.15"
env_logger = "0.9"
lazy_static = "1"
log = "0.4"
rand = "0.8"
rust-argon2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_derive = "1"
uuid = { version = "1", features = ["serde", "v4"] }